# micro-manager

./: .gitignore  .markdown-link-check-config.json  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  paper.bib  paper.md  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/workflows/: check-markdown.yml  check-pep8.yml  check-test-coverage.yml  pythonpublish.yml  release.yml  run-adaptivity-test.yml  run-adaptivity-tests-parallel.yml  run-adaptivity-tests-serial.yml  run-checks.yml  run-domain-decomposition-tests.yml  run-macro-cpp-dummy.yml  run-macro-micro-dummy-parallel.yml  run-macro-micro-dummy-serial.yml  run-macro-micro-dummy.yml  run-micro-manager-unit-tests.yml  run-unit-tests.yml  unit-test.yml  update-website.yml
docs/: README.md  ReleaseGuide.md  configuration.md  installation.md  logging.md  micro-simulation-convert-to-library.md  running.md  snapshot_configuration.md  usage-configuration.md  usage-convert-to-library.md  usage-running.md  usage.md
examples/: .gitignore  README.md  clean-example.sh  macro_dummy.py  micro-manager-adaptivity-config.json  micro-manager-config-parallel-1.json  micro-manager-config-parallel-2.json  micro-manager-config-parallel-run.json  micro-manager-config.json  micro-manager-cpp-adaptivity-config.json  micro-manager-cpp-config.json  micro-manager-python-adaptivity-config.json  micro-manager-python-config.json  parameter.hdf5  precice-config-adaptivity.xml  precice-config.xml  snapshot-config.json  snapshot_postprocessing.py
examples/cpp-dummy/: .gitignore  README.md  cpp_dummy.cpp  micro-manager-config.json  micro_cpp_dummy.cpp  micro_cpp_dummy.hpp  micro_dummy.cpp  micro_dummy_wrapper.py  run_micro_manager.py  run_micro_manager_adaptivity.py
examples/macro-micro-dummy/: README.md  config.py  macro-config.json  macro-dummy-config.json  macro-dummy.py  macro_dummy.py  micro-manager-config.json  micro-manager-dummy-config.json  micro_dummy.py  precice-config.xml  run_micro_manager.py
examples/python-dummy/: micro_dummy.py  run_micro_manager.py
examples/snapshot-example/: .gitignore  micro_dummy.py  run_snapshot.py  snapshot-config.json
examples/snapshot_example/: .gitignore  README.md  snapshot-config.json
examples/snapshot_example/cpp-dummy/: .gitignore  micro_cpp_dummy.cpp  micro_cpp_dummy.hpp  run_snapshot.py
examples/snapshot_example/python_dummy/: micro_dummy.py  run_snapshot.py
micro_manager/: __init__.py  __main__.py  adaptivity.py  config.py  config_snapshot.py  domain_decomposition.py  interpolation.py  micro_cpp_wrapper.py  micro_manager.py  micro_manager_base.py  micro_simulation.py  read_write_data.py  snapshot_computation.py
micro_manager/adaptivity/: adaptivity.py  global_adaptivity.py  global_adaptivity_lb.py  local_adaptivity.py
micro_manager/snapshot/: dataset.py  read_write_hdf.py  snapshot.py  snapshot_computation.py
micro_manager/tools/: logging_wrapper.py  misc.py
micromanager/: __init__.py  config.py  micromanager.py
snapshot/: __init__.py  config_snapshot.py  read_write_hdf.py  snapshot_computation.py
tests/: README.md
tests/integration/test_adaptivity/: clean-test.sh  macro_solver.py  micro-manager-config.json  micro_solver.py  precice-config.xml
tests/integration/test_unit_cube/: clean-test.sh  micro-manager-config-global-adaptivity-load-balancing.json  micro-manager-config-global-adaptivity-parallel.json  micro-manager-config-global-adaptivity.json  micro-manager-config-load-balancing.json  micro-manager-config-local-adaptivity.json  micro_dummy.py  (+4 more)
tests/unit/: .gitignore  micro-manager-config.json  micro-manager-config_crash.json  micro-manager-unit-test-adaptivity-config.json  micro-manager-unit-test-config.json  precice.py  snapshot-config.json  test_adaptivity.py  test_adaptivity_config.json  test_adaptivity_parallel.py  test_adaptivity_serial.py  test_dict_to_hdf.hdf5  test_domain_decomposition.py  test_functioncalls.py  test_global_adaptivity_lb.py  test_hdf5_functionality.py  test_interpolation.py  test_micro_manager.py  test_micro_simulation_crash_handling.py  test_output_write.hdf5  test_parameter.hdf5  test_snapshot_computation.py  test_unit.json
(+10 files in other folders)
